# quadruped_ros2_control

commands/keyboard_input/src/: KeyboardInput.cpp
controllers/ocs2_quadruped_controller/: CMakeLists.txt
controllers/ocs2_quadruped_controller/include/ocs2_quadruped_controller/estimator/: GaitBasedKalmanFilter.h
controllers/ocs2_quadruped_controller/src/control/: CtrlComponent.cpp
controllers/ocs2_quadruped_controller/src/estimator/: GaitBasedKalmanFilter.cpp
descriptions/deep_robotics/x30_description/meshes/: r_thigh.mtl  shank.mtl  torso.mtl
descriptions/deep_robotics/x30_description/xacro/: body.xacro
descriptions/unitree/go1_description/config/: robot_control.yaml
descriptions/unitree/go1_description/xacro/: ros2_control.xacro
docs/: Ocs2QuadrupedController.md  TargetManager.md  estimator.md  hardware_unitree_sdk2.md  launch_py.md  ocs2_quadruped_controller.md  perceptive.md  quadruped_control.md  rl_quadruped_controller.md  start.md  task.md  task_info.md  wbc.md
docs/class/: CtrlComponent.md  GaitManager.md  LeggedInterface.md  Ocs2QuadrupedController.md  StateOCS2.md  SwingTrajectoryPlanner.md  SwitchedModelReferenceManager.md
docs/ocs2_ros2/: ocs2_sqp.md  task.md
docs/ocs2_ros2/class/: CppAdInterface.md
docs/unitree_guide/class/: Estimator.md
hardwares/hardware_unitree_ros2/: CMakeLists.txt  HardwareUnitreeRos2.xml  README.md  package.xml
hardwares/hardware_unitree_ros2/include/hardware_unitree_ros2/: HardwareUnitreeRos2.h  crc32.h  dds_ros2_bridge_node.h
hardwares/hardware_unitree_ros2/launch/: dds_ros2_bridge.launch.py
hardwares/hardware_unitree_ros2/src/: HardwareUnitreeRos2.cpp  dds_ros2_bridge_node.cpp  dds_ros2_bridge_node_main.cpp
